# Vantle

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Build.bazel  CNAME  Info.html  Info.md  LICENSE.md  License.html  License.md  MODULE.bazel  Module.bazel  Module.html  NOTICE.md  Notice.html  Notice.md  README.md  Readme.html  Readme.md  buildbuddy.yaml  claude.md  component.rs  index.html  info.document.rs  info.generator.rs  info.html  license.document.rs  license.generator.rs  license.html  module.document.rs  module.generator.rs  module.html  notice.document.rs  notice.generator.rs  notice.html  platform.rs  readme.generator.rs  system.rs  test.rs  (+3 more)
Bazel/: BUILD.bazel  Info.md  License.md  Notice.md  Readme.md
Bazel/Generator/: BUILD.bazel
Bazel/Generator/component/: BUILD.bazel  rule.bzl  types.rs
Bazel/Generator/system/: BUILD.bazel
Bazel/Generator/test/: BUILD.bazel
Isolation/: Module.bazel
Isolation/language/rust/: BUILD.bazel  Build.bazel
Molten/: BUILD.bazel  Build.bazel  Info.html  Info.md  License.html  Module.bazel  Notice.html  Notice.md  Readme.html  Readme.md  component.rs  index.html  info.document.rs  info.generator.rs  info.html  license.document.rs  license.generator.rs  license.html  molten.document.rs  molten.rs  notice.document.rs  notice.generator.rs  notice.html  readme.generator.rs  system.rs
Molten/component/: BUILD.bazel  arena.rs  component.rs  graph.rs  hypergraph.rs
Molten/component/graph/: BUILD.bazel  Build.bazel  arena.rs  attribute.rs  graph.rs  index.rs  inspect.rs  matrix.rs  node.rs  relation.rs  state.rs  symbolic.rs
Molten/component/spatialize/: BUILD.bazel  error.rs  space.rs
Molten/document/: BUILD.bazel  index.rs  info.page.rs  license.page.rs  molten.page.rs  notice.page.rs
Molten/forge/: Build.bazel
Molten/resource/: BUILD.bazel
Molten/resource/system/: BUILD.bazel
Molten/system/: BUILD.bazel  Build.bazel  arena.rs  graph.rs  hypergraph.rs  query.rs  scale.rs  system.rs  translate.rs
Molten/system/arena/: BUILD.bazel  error.rs
Molten/system/evaluate/: BUILD.bazel  evaluate.rs  lava.rs  obsidian.rs
Molten/system/evaluation/: BUILD.bazel  evaluation.rs  evaluator.rs  inferencing.md  lava.rs
Molten/system/forge/: BUILD.bazel  command.rs  forge.rs
Molten/system/graph/: BUILD.bazel  Build.bazel  attribute.rs  constructor.rs  graph.rs  index.rs  mutator.rs  relation.rs  symbolic.rs
Molten/system/hypergraph/: BUILD.bazel  evaluate.rs
Molten/system/observation/: BUILD.bazel  error.rs  layer.rs  state.rs
Molten/system/optimize/: BUILD.bazel  Build.bazel  optimize.rs
Molten/system/spatialize/: BUILD.bazel  Build.bazel  Readme.html  Readme.md  client.rs  command.rs  error.rs  event.rs  index.html  launcher.rs  layout.rs  mock.rs  mouse.rs  palette.rs  pane.rs  readme.generator.rs  render.rs  scale.rs  scene.rs  spatialize.document.rs  spatialize.rs  view.rs
Molten/test/: BUILD.bazel  Build.bazel
Molten/test/resource/: BUILD.bazel
Molten/test/system/: BUILD.bazel
component/: BUILD.bazel  assemble.rs  component.rs  generation.rs  mutate.rs  observation.rs  order.rs  query.rs  tag.rs  translator.rs  web.rs
component/design/: BUILD.bazel  palette.rs  proportion.rs
component/generation/: BUILD.bazel
component/math/: BUILD.bazel  expression.rs  regression.rs
component/observation/: BUILD.bazel  category.rs  channel.rs  collector.rs  configuration.rs  expression.rs  filter.rs  layer.rs  opaque.rs  serialize.rs  span.rs  stream.rs  transparent.rs  visitor.rs
component/spatialize/: BUILD.bazel  color.rs  dimension.rs  matrix.rs  pair.rs  proportion.rs  quaternion.rs  tolerance.rs  vector.rs
component/tag/: BUILD.bazel  expression.rs
component/translator/: BUILD.bazel  source.rs
component/web/: BUILD.bazel  attribute.rs  body.rs  class.rs  element.rs  error.rs  extraction.rs  index.rs  language.rs  list.rs  markdown.rs  page.rs  query.rs  render.rs  selector.rs  span.rs  style.rs  table.rs  validate.rs  value.rs
document/: BUILD.bazel  content.rs  index.rs  info.page.rs  license.page.rs  module.page.rs  notice.page.rs  vantle.page.rs
experiment/: BUILD.bazel
platform/: BUILD.bazel  build.rs  command.rs  run.rs  test.rs
platform/observation/: BUILD.bazel
platform/protobuf/: BUILD.bazel
platform/wasm/: BUILD.bazel
resource/: BUILD.bazel
resource/system/: BUILD.bazel
system/: BUILD.bazel  command.rs  concurrent.rs  diagnostic.rs  event.rs  graph.rs  highlight.rs  language.rs  logging.rs  observation.rs  resource.rs  system.rs  translator.rs  web.rs
system/bazel/: BUILD.bazel  runfiles.rs  symlink.rs
system/command/: BUILD.bazel  error.rs
system/concurrent/: BUILD.bazel  error.rs  pool.rs  runtime.rs
system/distribution/: BUILD.bazel  command.rs
system/document/: BUILD.bazel  publish.rs  stylesheet.document.rs  vantle.rs
system/documentation/: BUILD.bazel  stylesheet.document.rs
system/generation/: BUILD.bazel  Readme.html  Readme.md  extract.document.rs  generation.document.rs  generation.rs  index.html  main.rs  readme.generator.rs  rust.rs  source.rs
system/graph/: BUILD.bazel  similarity.rs  symbolic.rs
system/logging/: BUILD.bazel  autolog.rs  logging.rs
system/observation/: BUILD.bazel  Readme.html  Readme.md  argument.rs  command.rs  endpoint.rs  error.rs  http.rs  index.html  macro.rs  observation.document.rs  observation.proto  peer.rs  readme.generator.rs  record.rs  server.rs  trace.rs
system/protobuf/: BUILD.bazel
system/spatial/: BUILD.bazel
system/spatialize/: BUILD.bazel  Readme.html  Readme.md  index.html  interact.rs  proportion.rs  readme.generator.rs  render.rs  spatialize.document.rs
system/translator/: BUILD.bazel  buffer.rs  consume.rs  error.rs  view.rs
system/trie/: BUILD.bazel  traverse.rs  trie.rs
system/web/: BUILD.bazel  highlight.rs  render.rs
test/: BUILD.bazel  report.rs  resource.rs  system.rs  test.rs  utility.rs
test/report/: BUILD.bazel  error.rs
test/resource/: BUILD.bazel
test/system/: BUILD.bazel  performance.rs
test/utilities/: BUILD.bazel  standard.rs
test/utility/: BUILD.bazel  utility.rs
(+741 files in other folders)
