#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//component/generation/starlark:defs.bzl", "extract")
load("//component/web/starlark:defs.bzl", "copy", "distribute", "document", "folder")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Notice                                                                                                                                           [ Notice ]
filegroup(
    name = "notice",
    srcs = [
        "LICENSE.md",
        "NOTICE.md",
        "README.md",
    ],
)

#################################################################################################################################################################
########## Module                                                                                                                                       [ Module ]
rust_library(
    name = "component",
    srcs = ["component.rs"],
    deps = [
        "//component:generation",
        "//component:observation",
        "//component:web",
    ],
)

rust_library(
    name = "system",
    srcs = ["system.rs"],
    deps = [
        "//system:command",
        "//system:concurrent",
        "//system:diagnostic",
        "//system:generation",
        "//system:graph",
        "//system:language",
        "//system:observation",
        "//system:resource",
    ],
)

rust_library(
    name = "platform",
    srcs = ["platform.rs"],
    deps = [
        "//platform:command",
        "//platform:run",
        "//platform:test",
    ],
)

rust_library(
    name = "test",
    srcs = ["test.rs"],
    deps = [
        "//test:report",
        "//test:resource",
        "//test:utility",
    ],
)

rust_library(
    name = "module",
    srcs = ["vantle.rs"],
    crate_name = "vantle",
    deps = [
        ":component",
        ":platform",
        ":system",
        ":test",
        "//Molten:module",
    ],
)

#################################################################################################################################################################
########## Tool                                                                                                                                           [ Tool ]
##### Analysis                                                                                                                                  [ Tool, Analysis ]
alias(
    name = "analysis.rust",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

##### Format                                                                                                                                      [ Tool, Format ]
alias(
    name = "format.rust",
    actual = "@rules_rust//tools/upstream_wrapper:rustfmt",
)

buildifier(
    name = "format.bazel",
    lint_mode = "fix",
    mode = "fix",
)

#################################################################################################################################################################
########## Documentation                                                                                                                         [ Documentation ]
document(
    srcs = ["vantle.document.rs"],
    destination = "index.html",
    deps = [
        "//:module.bazel.version",
        "//component/web:extraction",
        "//system/generation/web:style",
    ],
)

document(
    srcs = ["info.document.rs"],
    destination = "info.html",
    deps = [
        "//system/generation/web:style",
    ],
)

document(
    srcs = ["notice.document.rs"],
    data = ["//:NOTICE.md"],
    destination = "notice.html",
    deps = [
        "//system/generation/web:style",
    ],
)

document(
    srcs = ["license.document.rs"],
    data = ["//:LICENSE.md"],
    destination = "license.html",
    deps = [
        "//system/generation/web:style",
    ],
)

extract(
    name = "module.source",
    language = "starlark",
    source = "MODULE.bazel",
)

extract(
    name = "module.version",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"module\") arguments: (argument_list (keyword_argument name: (identifier) @key (#eq? @key \"version\") value: (string (string_content) @capture))))",
    source = "MODULE.bazel",
)

extract(
    name = "module.bazel.version",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"module\") arguments: (argument_list (keyword_argument name: (identifier) @key (#eq? @key \"bazel_compatibility\") value: (list (string (string_content) @capture)))))",
    source = "MODULE.bazel",
)

document(
    srcs = ["module.document.rs"],
    destination = "module.html",
    deps = [
        "//component/web:extraction",
        "//:module.source",
        "//system/generation/web:style",
    ],
)

#################################################################################################################################################################
########## Distribution                                                                                                                             [ Distribution ]
copy(
    name = "domain",
    src = "CNAME",
    path = "CNAME",
)

folder(
    name = "documentation",
    srcs = [
        ":domain",
        ":info.document",
        ":license.document",
        ":module.document",
        ":notice.document",
        ":vantle.document",
        "//Molten:info.document",
        "//Molten:license.document",
        "//Molten:molten.document",
        "//Molten:notice.document",
        "//Molten/resource:logo.copy",
        "//Molten/system/spatialize:spatialize.document",
        "//resource:favicon.copy",
        "//resource:logo.copy",
        "//system/documentation:stylesheet.document",
        "//system/generation:generation.document",
        "//system/generation/rust:autotest.document",
        "//system/generation/web:web.document",
        "//system/generation/web/assembly:compute.js.copy",
        "//system/generation/web/assembly:compute.wasm.copy",
        "//system/observation:observation.document",
        "//system/spatialize:spatialize.document",
        "//Molten/test/resource/system/graph/module/citizen/symbolic:citizen.source",
        "//Molten/test/resource/system/graph/module/math/numeric/logic/boolean/symbolic:boolean.source",
        "//Molten/test/resource/system/graph/module/join/symbolic:join.source",
        "//:module.source.source",
        "//Molten/test/resource/system/graph/state/particle:disjoint.source",
        "//Molten/test/resource/system/graph/state/particle:cases.document.source",
        "//Molten:info.document.rule.source",
        "//resource:copy.rule.source",
        "//:folder.rule.source",
        "//:distribute.rule.source",
    ],
)

distribute(
    name = "distribute.documentation",
    folder = ":documentation",
)

extract(
    name = "folder.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"folder\")) @capture",
    source = "BUILD.bazel",
)

extract(
    name = "distribute.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"distribute\")) @capture",
    source = "BUILD.bazel",
)
