#################################################################################################################################################################
########### Import                                                                                                                                     [ Import ]
##### Internal                                                                                                                               [ Import, Internal ]
##### External                                                                                                                               [ Import, External ]
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//component/generation/starlark:defs.bzl", "extract", "query")
load("//component/web/starlark:defs.bzl", "copy", "distribute", "document", "folder")

##### Visibility                                                                                                                                       [ Module ]
package(default_visibility = ["//visibility:public"])

##### Notice                                                                                                                                           [ Notice ]
filegroup(
    name = "notice",
    srcs = [
        "LICENSE.md",
        "NOTICE.md",
        "README.md",
    ],
)

#################################################################################################################################################################
########## Module                                                                                                                                       [ Module ]
rust_library(
    name = "component",
    srcs = ["component.rs"],
    deps = [
        "//component:generation",
        "//component:observation",
        "//component:web",
    ],
)

rust_library(
    name = "system",
    srcs = ["system.rs"],
    deps = [
        "//system:command",
        "//system:concurrent",
        "//system:diagnostic",
        "//system:generation",
        "//system:graph",
        "//system:language",
        "//system:observation",
        "//system:resource",
    ],
)

rust_library(
    name = "platform",
    srcs = ["platform.rs"],
    deps = [
        "//platform:command",
        "//platform:run",
        "//platform:test",
    ],
)

rust_library(
    name = "test",
    srcs = ["test.rs"],
    deps = [
        "//test:resource",
        "//test:system",
        "//test:utility",
    ],
)

rust_library(
    name = "module",
    srcs = ["vantle.rs"],
    crate_name = "vantle",
    deps = [
        ":component",
        ":platform",
        ":system",
        ":test",
        "//Molten:module",
    ],
)

#################################################################################################################################################################
########## Tool                                                                                                                                           [ Tool ]
##### Analysis                                                                                                                                  [ Tool, Analysis ]
alias(
    name = "analysis.rust",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

##### Format                                                                                                                                      [ Tool, Format ]
alias(
    name = "format.rust",
    actual = "@rules_rust//tools/upstream_wrapper:rustfmt",
)

buildifier(
    name = "format.bazel",
    lint_mode = "fix",
    mode = "fix",
)

#################################################################################################################################################################
########## Documentation                                                                                                                         [ Documentation ]
document(
    src = "vantle.document.rs",
    destination = "index.html",
    deps = ["//document:vantle"],
)

document(
    src = "info.document.rs",
    destination = "info.html",
    deps = ["//document:info"],
)

document(
    src = "notice.document.rs",
    destination = "notice.html",
    deps = ["//document:notice"],
)

document(
    src = "license.document.rs",
    destination = "license.html",
    deps = ["//document:license"],
)

extract(
    name = "module.source",
    language = "starlark",
    source = "MODULE.bazel",
)

extract(
    name = "module.version",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"module\") arguments: (argument_list (keyword_argument name: (identifier) @key (#eq? @key \"version\") value: (string (string_content) @capture))))",
    source = "MODULE.bazel",
)

extract(
    name = "module.bazel.version",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"module\") arguments: (argument_list (keyword_argument name: (identifier) @key (#eq? @key \"bazel_compatibility\") value: (list (string (string_content) @capture)))))",
    source = "MODULE.bazel",
)

document(
    src = "module.document.rs",
    destination = "module.html",
    deps = ["//document:module"],
)

#################################################################################################################################################################
########## Query                                                                                                                                         [ Query ]
query(
    name = "distribute.command",
    binary = "//system/observation:command",
    label = "//:distribute.documentation",
)

#################################################################################################################################################################
########## Distribution                                                                                                                             [ Distribution ]
copy(
    name = "domain",
    src = "CNAME",
    path = "CNAME",
)

folder(
    name = "documentation",
    srcs = [
        ":domain",
        ":info.document",
        ":license.document",
        ":module.document",
        ":notice.document",
        ":vantle.document",
        "//:distribute.command.source",
        "//:distribute.rule.source",
        "//:folder.rule.source",
        "//:module.source.source",
        "//Molten:info.document",
        "//Molten:info.document.rule.source",
        "//Molten:license.document",
        "//Molten:molten.document",
        "//Molten:notice.document",
        "//Molten/resource:logo.copy",
        "//Molten/system/forge:command.lava.source",
        "//Molten/system/forge:command.lava.sink.grpc.source",
        "//Molten/system/forge:command.lava.sink.log.source",
        "//Molten/system/spatialize:command.spatialize.source",
        "//Molten/system/spatialize:launcher.assembler.source",
        "//Molten/system/spatialize:spatialize.document",
        "//Molten/system/spatialize/render/stage:geometry.pipeline.source",
        "//Molten/test/component/graph/state/particle:function.document.source",
        "//Molten/test/resource/system/graph/module/citizen/symbolic:citizen.source",
        "//Molten/test/resource/system/graph/module/join/symbolic:join.source",
        "//Molten/test/resource/system/graph/module/math/numeric/logic/boolean/symbolic:boolean.source",
        "//Molten/test/resource/system/graph/state/particle:particle.cases.json.source",
        "//Molten/test/resource/system/graph/state/particle:disjoint.source",
        "//Molten/test/resource/system/graph/state/particle:template.document.source",
        "//resource:copy.rule.source",
        "//resource:favicon.copy",
        "//resource:logo.copy",
        "//system/documentation:stylesheet.document",
        "//component/generation/starlark:extract.document.source",
        "//component/generation/starlark:query.document.source",
        "//system/generation:extract.document",
        "//system/generation:generation.document",
        "//system/generation/rust:autotest.document",
        "//system/generation/rust:function.document",
        "//system/generation/rust:function.document.extract.source",
        "//system/generation/rust:performance.document",
        "//system/generation/web:web.document",
        "//system/generation/web/assembly:compute.js.copy",
        "//system/generation/web/assembly:compute.wasm.copy",
        "//system/observation:observation.document",
        "//system/spatialize:spatialize.document",
        "//system/translator:view.trace.source",
        "//test/resource/system/performance/sort:sort.cases.json.source",
        "//test/resource/system/performance/sort:sort.document.source",
        "//test/resource/system/performance/sort:specification.json.source",
        "//test/system/function:execution.schema.source",
        "//test/system/performance/sort:execution.schema.source",
        "//test/system/performance/sort:performance.document.source",
    ],
)

distribute(
    name = "distribute.documentation",
    folder = ":documentation",
)

extract(
    name = "folder.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"folder\")) @capture",
    source = "BUILD.bazel",
)

extract(
    name = "distribute.rule",
    language = "starlark",
    query = "(call function: (identifier) @fn (#eq? @fn \"distribute\")) @capture",
    source = "BUILD.bazel",
)
